--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.13.0",
+    "bootstrap": "^4.5.0",
     "core-js": "^3.6.5",
+    "firebase": "^7.15.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
